@@ -1,0 +1,16 @@
+-- In this test, we put things in .mtn-ignore that trigger every
+-- possible syntax error message from the regular expression library,
+-- to ensure that the user's view of these errors is sensible.
+
+mtn_setup()
+
+writefile("ignoreme")
+writefile("dontignoreme")
+check(get("mtn-ignore", ".mtn-ignore"))
+
+check(raw_mtn("ls", "unknown"), 0, true, true)
+check(get("stdout-ref"))
+check(get("stderr-ref"))
+
+check(samefile("stdout", "stdout-ref"))
+check(samefile("stderr", "stderr-ref"))
