@@ -1,0 +1,32 @@
+\
+\c
+x{3,1}
+x{99999}
+[abc
+[z-a]
+*
+(?h)
+[:alpha:]
+(abc
+abc\3
+(?#abc
+)
+(?<x)y
+(?<=a*)y
+(?()abc)
+(xy)(?(1)abc|def|ghi)
+(?(*))
+(?R*)
+[[:fnord:]]
+\\x{123456}
+(?(0))
+(?<=\C)
+\l
+(?C256)
+(?C1
+(?R)
+(?P*)
+(?P<*>x)
+(?P<aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa>)
+\777
+^ignoreme$
