@@ -691,3 +691,4 @@ table.insert(tests, "automate_content_diff")
 table.insert(tests, "netsync_hook_errcodes")
 table.insert(tests, "automate_stdio_options")
 table.insert(tests, "spawn_redirected_hook_helper")
+table.insert(tests, "syntax_errors_in_.mtn-ignore")
